// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render 1`] = `
<button
  className="w-btn-small sm:h-btn text-center text-gray-700 text-sm bg-white border-white 
 sm:w-full sm:font-semibold sm:text-lg hover:bg-gray-200 disabled:bg-gray-200"
>
  <div
    className="flex flex-col flex-col-reverse items-center justify-center sm:flex-row "
  />
</button>
`;

exports[`should render disabled when disabled prop passed 1`] = `
<button
  className="w-btn-small sm:h-btn text-center text-gray-700 text-sm bg-white border-white 
 sm:w-full sm:font-semibold sm:text-lg hover:bg-gray-200 disabled:bg-gray-200"
  disabled={true}
>
  <div
    className="flex flex-col flex-col-reverse items-center justify-center sm:flex-row "
  />
</button>
`;

exports[`should render with text 1`] = `
<button
  className="w-btn-small sm:h-btn text-center text-gray-700 text-sm bg-white border-white 
 sm:w-full sm:font-semibold sm:text-lg hover:bg-gray-200 disabled:bg-gray-200"
>
  <div
    className="flex flex-col flex-col-reverse items-center justify-center sm:flex-row "
  >
    name
  </div>
</button>
`;
